# at-bus-airflow-server

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup-gcp-ssh.sh
.github/workflows/: build_push_docker_image.yml  build_push_docker_image_aws.yml  build_push_docker_image_gcp.yml  deploy-airflow-files.yml  deploy-airflow.yml  deploy_airflow_on_ec2_server.yml  deploy_dags_to_server.yml  docker_pull_in_airflow_server.yml
airflow/: Dockerfile  Makefile
airflow/dags/: dag_at_bus_load_transform.py  test_gcp_conn.py
ansible/: README.md
ansible/inventory/: production.yml
ansible/inventory/group_vars/: airflow_servers.yml  all.yml
ansible/playbooks/operations/: README-docker-pull.md
ansible/roles/airflow/tasks/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/vars/: main.yml
config/: airflow.cfg
dags/: cloud_storage_dag_UI_conn.py  cloud_storage_dag_secret_manager_conn.py  dag_at_bus_load.py  dag_at_bus_loard.py  dag_postgres_task.py  dag_with_python.py  my_cosmos_dag.py  my_dag.py  my_dag_V2.py  my_dag_s3.py  my_dag_s3_UI_conn.py  my_dag_s3_aws_backend.py
dags/dbt/dbt_data_transform/: .user.yml
docs/: GITHUB_SETUP.md
script/: setup-ssh.sh
scripts/: open_vm_port.sh
