[project]
name = "airflow-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "apache-airflow-providers-amazon[s3fs]>=9.8.0",
    "astronomer-cosmos>=1.10.1",
    "dbt-bigquery>=1.9.2",
    "dbt-core>=1.9.8",
    "polars>=1.30.0",
    "ruff>=0.11.11",
]
